* Use literal_eval instead of safe_eval (CVE-2014-6633)

Version 2.4.14 - 2014-08-03
* Bug fixes (see mercurial logs for details)

Version 2.4.13 - 2014-07-01
* Bug fixes (see mercurial logs for details)

Version 2.4.12 - 2014-04-07
* Bug fixes (see mercurial logs for details)

Version 2.4.11 - 2014-03-22
* Bug fixes (see mercurial logs for details)

Version 2.4.10 - 2013-12-04
* Bug fixes (see mercurial logs for details)

Version 2.4.9 - 2013-10-01
* Bug fixes (see mercurial logs for details)

Version 2.4.8 - 2013-07-22
* Bug fixes (see mercurial logs for details)

Version 2.4.7 - 2013-06-09
* Bug fixes (see mercurial logs for details)

Version 2.4.6 - 2013-05-02
* Bug fixes (see mercurial logs for details)

Version 2.4.5 - 2013-02-12
* Bug fixes (see mercurial logs for details)

Version 2.4.4 - 2012-12-23
* Bug fixes (see mercurial logs for details)

Version 2.4.3 - 2012-11-05
* Bug fixes (see mercurial logs for details)

Version 2.4.2 - 2012-09-10
* Bug fixes (see mercurial logs for details)
* Fix search button clause in ModelButton.get_groups (CVE-2012-2238)

Version 2.4.1 - 2012-04-24
* Restore es_AR translation

Version 2.4.0 - 2012-04-23
* Bug fixes (see mercurial logs for details)
* Don't allow rpc call on ModelStorage without ModelView (CVE-2012-0215)
* Add shared WebDAV
* Remove workflow module
* Simplify workflow engine
* Add ir.model.button for access rights
* Replace fill by expand
* Integer, Numeric and Float allow None as value
* NULL value is None and not False
* Replace user action by a list of actions
* Add group call to on_change_with
* Allow to get fuzzy translation
* Allow to customize server timezone
* Add richtext widget for WYSIWYG editor
* Add support of fields.Time
* Replace nested view by reference id
* Remove underscore to ir.translation methods
* Add default database language code
* Add extras_depend to module definition
* Store session in database
* New Wizard design
* Add pyson.Id
* Use XML-RPC struct for Decimal and Date